feat: modified api spec
