# packages/api-lib/src/models/PinMeta.ts
@@ -1,78 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Crate Network API
- * ## About this spec  The Crate API exposes several endpoints which allows the Crate macOS, iOS,  iPadOS and web clients to interact with Crate\'s IPFS cluster without the  clients needing to run IPFS clients of their own. Crate Network implements  the IPFS Pinning API specification at the `/pins` endpoint, as described by  the spec found [on GitHub](https://github.com/ipfs/pinning-services-api-spec/blob/3196b0b466752a3626b716969703cbd48cb9bcf7/ipfs-pinning-service.yaml).  The pinning API accepts a Bearer authorization token retrieved from your Crate account. This identifies your user and adds the pinned content to  your files on Crate. This version of the API is modified to include  metadata, all of which is optional so that Crate continues to conform to  the IPFS spec.  The Filecoin replication service is handled via the pinning API. Instead of  using expensive, centralized cloud storage as the backend, Crate safely  replicates content onto other decentralized networks. When a request comes  to the pinning service to retrieve the content, Crate will prioritize  cached content, otherwise falling back to the Filecoin network to retrieve your files. 
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-/**
- * Optional metadata for pin object
- * @export
- * @interface PinMeta
- */
-export interface PinMeta {
-    [key: string]: string | any;
-    /**
-     * The backend to use when storing the pin
-     * @type {string}
-     * @memberof PinMeta
-     */
-    backend?: PinMetaBackendEnum;
-}
-
-
-/**
- * @export
- */
-export const PinMetaBackendEnum = {
-    Qyeye: 'qyeye'
-} as const;
-export type PinMetaBackendEnum = typeof PinMetaBackendEnum[keyof typeof PinMetaBackendEnum];
-
-
-/**
- * Check if a given object implements the PinMeta interface.
- */
-export function instanceOfPinMeta(value: object): boolean {
-    let isInstance = true;
-
-    return isInstance;
-}
-
-export function PinMetaFromJSON(json: any): PinMeta {
-    return PinMetaFromJSONTyped(json, false);
-}
-
-export function PinMetaFromJSONTyped(json: any, ignoreDiscriminator: boolean): PinMeta {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-            ...json,
-        'backend': !exists(json, 'backend') ? undefined : json['backend'],
-    };
-}
-
-export function PinMetaToJSON(value?: PinMeta | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-            ...value,
-        'backend': value.backend,
-    };
-}
-
